Fix contrast

--- a/moma/style.css
+++ b/moma/style.css
@@ -145,7 +145,7 @@ footer {
     background: #947ADA;
   }
   .checkbox-wrapper-3 #cbx-3:checked + .toggle span {
-    background: #d05fda;
+    background: #aa4ead;
     transform: translateX(20px);
     transition: all 0.2s cubic-bezier(0.8, 0.4, 0.3, 1.25), background 0.15s ease;
     box-shadow: 0 3px 8px rgba(79, 46, 220, 0.2);
@@ -183,7 +183,7 @@ footer {
   }
   
   .radio-toolbar-3 input[type="radio"]:checked+label {
-    background-color: #d05fda;
+    background-color: #aa4ead;
     
     color: white;
   }
